--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: "Arial", sans-serif;
+    font-family: "POPPINS", sans-serif;
 }
 section {
     text-align: center;
@@ -10,13 +10,46 @@ section {
     width: 306px;
     margin: 50px auto;
 }
+
 .cell {
+    margin: 1px;
     font-family: "POPPINS";
     width: 100px;
     height: 100px;
     box-shadow: 0 0 0 1px #333333;
-    border: 1px solid #333333;
+    border: 0px solid #333333;
     cursor: pointer;
     line-height: 100px;
     font-size: 60px;
+    background-color: #D9D9D9;
+}
+
+.cell:hover {
+    background-color: #A8C686;
+}
+
+.game--status {
+    align-content: center;
+    background-color: orange;
+    padding: 10px;
+    width: 400px;
+}
+
+.game--title {
+    background-color: skyblue;
+    padding: 10px;
+    width: 400px;
+}
+
+button {
+    font-weight: bold;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: #F3A712;
+    width: 200px;
+    padding: 10px;
+}
+
+button:hover {
+    background-color: yellow;
 }
